SEO & About Page

--- a/website/index.html
+++ b/website/index.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CodeX | Professional Mobile IDE</title>
-    <meta name="description" content="The ultimate mobile IDE for professional developers. Code, preview, and deploy on the go with CodeX." />
-  </head>
-  <body class="bg-[#0A0A0A] text-white">
+
+    <title>CodeX | Professional Mobile IDE & Code Editor for Android/iOS</title>
+    <meta name="description"
+        content="CodeX is the ultimate professional mobile IDE. Experience desktop-grade coding with VS Code features on Android and iOS. Built by Karthi-Nexgen (Nexera Team)." />
+    <meta name="keywords"
+        content="Mobile IDE, Mobile Code Editor, Mobile VS Code, VS code for mobile, CodeX, CodeX Ide, Karthi-Nexgen, Karthi-AI-Hub, Flutter IDE, Mobile Web Development" />
+    <meta name="author" content="Karthi-Nexgen" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://codexmobileide.vercel.app/" />
+    <meta property="og:title" content="CodeX | Professional Mobile IDE" />
+    <meta property="og:description"
+        content="Write code anywhere with the professional power of CodeX. Desktop-grade syntax and live preview on your phone." />
+    <meta property="og:image" content="https://codexmobileide.vercel.app/screenshot2.jpeg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://codexmobileide.vercel.app/" />
+    <meta property="twitter:title" content="CodeX | Professional Mobile IDE" />
+    <meta property="twitter:description"
+        content="Write code anywhere with the professional power of CodeX. Desktop-grade syntax and live preview on your phone." />
+    <meta property="twitter:image" content="https://codexmobileide.vercel.app/screenshot2.jpeg" />
+</head>
+
+<body class="bg-[#0A0A0A] text-white">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-  </body>
+</body>
+
 </html>
